@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<object name="portal_skins">
+ <object name="cps_wiki" meta_type="Filesystem Directory View"
+    directory="CPSWiki/skins/cps_wiki"/>
+ <skin-path name="CPSSkins">
+  <layer name="cps_wiki" insert-after="cps_default"/>
+ </skin-path>
+ <skin-path name="CPSSkins-macroless">
+  <layer name="cps_wiki" insert-after="cps_default"/>
+ </skin-path>
+</object>
