@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="workspaces" meta_type="CPS Tree Cache">
+ <property name="type_names">
+  <element value="Wiki"/>
+ </property>
+</object>
