@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_types">
+ <object name="Wiki" meta_type="Factory-based Type Information"/>
+ <object name="Wiki Page" meta_type="Factory-based Type Information"/>
+</object>
