@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_workflow">
+ <object name="section_wiki_wf" meta_type="CPS Workflow"/>
+ <object name="workspace_wiki_wf" meta_type="CPS Workflow"/>
+</object>
